Closed Bug 35257 Opened 25 years ago Closed 25 years ago

crash setting selectedIndex for SELECT not in DOM tree

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: myk, Assigned: rods)

Details

(Keywords: crash)

Attachments

(1 file)

Overview Description: Mozilla crashes when JavaScript code creates a SELECT menu, populates it with two OPTIONs, then attempts to set the SELECT's selectedIndex property to a legal value before the SELECT menu has been added to the DOM tree. Steps to Reproduce: load test case and click button Actual Results: crash Expected Results: SELECT menu appears in document with correct OPTION selected Build Date & Platform Bug Found: Linux 2000-04-06-10 Additional Builds and Platforms Tested On: Linux 2000-04-06-10 also crashes Additional Information: Could be related to bug 9136.
Attached file test case
This also crashed on MacOS build 2000040908 Mozilla/5.0 (Macintosh; N; PPC; en-US; m14) Changing to all platforms
OS: Linux → All
Hardware: PC → All
QA Contact: gerardok → janc
Adding crash keyword.
Keywords: crash
nominating for nsbeta2
Keywords: nsbeta2
Status: NEW → ASSIGNED
Target Milestone: --- → M16
The obvious crasher here is fixed, some issues still remain though, I was able to crash my debug mozilla on my WinNT system but not my optimized mozilla on linux. Rods, on my WinNT system I sometimes got *two* selects by clicking on the button once (as you probably remember there was a bug on that some time back), and when I clicked on either one of the selects mozilla crashed in nsListControlFrame, one of the crashes I saw was a null pointer reference in nsListControlFrame::GetOptionFromContent(), the first NS_ADDREF in that function, I tried making that a NS_IF_ADDREF() but then I crashed somewhere else... Over to you Rods...
Assignee: jst → rods
Status: ASSIGNED → NEW
This maybe behaving better now that my fix for comboboxes is turned. I can't reproduce it, so I will close it out. fixed
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Works for me too in Linux 2000-05-27-20. Verifying fixed.
Status: RESOLVED → VERIFIED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: