XPCOM methods that return a success call *must* set their output parameters, this fixes part of the crash in bug 35257 (crash setting selectedIndex for SELECT not in DOM tree).